--- a/views/index.pug
+++ b/views/index.pug
@@ -17,4 +17,4 @@ block content
       document.getElementById("target").innerHTML = "Value now " + client_count;
     }
   
-  a(href="flights") Go to Flights page
+  a(href="restaurant") Go to Restaurant page
